Ensure .title and .subtitle styles apply on mobile

--- a/src/styles/components/_title.scss
+++ b/src/styles/components/_title.scss
@@ -13,9 +13,9 @@
   Margin-bottom: 5px;
 
   @include on-mobile {
-    font-size: 14px;
-    margin-bottom: 4px;
-    Margin-bottom: 4px;
+    font-size: 14px !important;
+    margin-bottom: 4px !important;
+    Margin-bottom: 4px !important;
   }
 
   &,
@@ -31,7 +31,7 @@
   Margin-bottom: 0;
 
   @include on-mobile {
-    font-size: 14px;
+    font-size: 14px !important;
   }
 
   &,
